@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<h1>Search Engine <img class="toplogo" src="logo.jpg" alt="[R logo]"></h1>
+<h1>Search Engine <img class="toplogo" src="Rlogo.svg" alt="[R logo]"></h1>
 
 <div align="center">
 <a href="index.html"><img class="arrow" src="up.jpg" alt="[Top]"></a>
