@@ -8,7 +8,7 @@
 <body>
 
 <h1>Statistical Data Analysis
-<img class="toplogo" src="logo.jpg" alt="[R logo]"> 
+<img class="toplogo" src="Rlogo.svg" alt="[R logo]"> 
 </h1>
 
 <hr width="100%">
