@@ -1,5 +1,5 @@
 % -*- coding: utf-8 -*-
-\newcommand{\Rlogo}{\if{html}{\figure{../../html/logo.jpg}}\if{latex}{\figure{logo.jpg}{options: width=0.5in}}}
+\newcommand{\Rlogo}{\if{html}{\figure{../../html/Rlogo.svg}{options: class="toplogo" alt="[R logo]"}\if{latex}{\figure{logo.jpg}{options: width=0.5in}}}
 
 \name{NEWS}
 \title{ R News}
